--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,6 +1,10 @@
 flask==2.3.3
-pillow==10.0.0
+pillow==10.1.0
 werkzeug==2.3.7
 jinja2==3.1.2
 itsdangerous==2.1.2
-click==8.1.7 
+click==8.1.7
+jieba==0.42.1
+snownlp==0.12.3
+pyyaml==6.0.1
+openai==1.19.0 
